--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
 <header th:fragment="header">
   <div class="header-container">
     <div class="logo">
-      <a href="/" style="text-decoration: none; color: inherit;">Study-Mate</a>
+      <a th:href="@{/study-mate/main}" style="text-decoration: none; color: inherit;">Study-Mate</a>
     </div>
     <div class="nav-links">
       <a th:href="@{/study-mate/myclass}">내 강의실</a>
