--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,6 +10,9 @@
       <a th:href="@{/study-mate/myclass}">내 강의실</a>
       <a th:href="@{/study-mate/search-page}">과목 찾기</a>
       <a th:href="@{/paid.html}">유료 서비스</a>
+      <form th:action="@{/logout}" method="post">
+        <button type="submit">로그아웃</button>
+      </form>
     </div>
   </div>
 </header>
