--- a/src/main/resources/templates/myclass.html
+++ b/src/main/resources/templates/myclass.html
@@ -12,7 +12,7 @@
 <div th:replace="~{fragments/header :: header}"></div>
 
 <div class="container">
-  <input type="hidden" name="userId" th:value="${#authentication.principal.id}">
+  <input type="hidden" name="userId" th:value="${#authentication.principal.getId()}">
   <div class="main-title">My <span class="accent">Classroom</span></div>
 
   <!-- 내가 만든 스터디 섹션 -->
